src/objects/Contact.object
<CustomObject>
    <fields>
        <fullName>ER_Account_Address_Sync__c</fullName>
        <label>Account Address Sync</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Synchronized with Account legal address</fullName>
                    <default>true</default>
                    <label>Synchronized with Account legal address</label>
                </value>
                <value>
                    <fullName>Not Synchronized with Account legal address</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ER_Bulk_Mail__c</fullName>
        <label>Bulk Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>ER_Business_Unit_2__c</fullName>
        <defaultValue>$User.ER_BUText__c</defaultValue>
        <label>Business Unit</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>ER_Business_Unit</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>ER_Business_Unit__c</fullName>
        <formula>TEXT(Owner.ER_Business_Unit__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Business Unit</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ER_Card_Operational_System_ID__c</fullName>
        <externalId>true</externalId>
        <label>Card Operational System ID</label>
        <length>40</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>ER_Channel__c</fullName>
        <label>Channel</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Client</fullName>
                </value>
                <value>
                    <fullName>Merchant</fullName>
                </value>
                <value>
                    <fullName>User</fullName>
                </value>
                <value>
                    <fullName>Customer</fullName>
                </value>
                <value>
                    <fullName>Internal</fullName>
                </value>
                <value>
                    <fullName>Lead provider</fullName>
                </value>
                <value>
                    <fullName>Trade association</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
                <value>
                    <fullName>Unmatched</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ER_Client_Card_Operational_System_ID__c</fullName>
        <label>Client Card Operational System ID</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ER_Client_Paper_Operational_System_ID__c</fullName>
        <label>Client Paper Operational System ID</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ER_Department_Family__c</fullName>
        <label>Department Family</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Finance</fullName>
                    <default>true</default>
                    <label>Finance</label>
                </value>
                <value>
                    <fullName>Purchasing</fullName>
                </value>
                <value>
                    <fullName>HR</fullName>
                </value>
                <value>
                    <fullName>Facility services</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ER_Do_Not_Mail__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Do Not Mail</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ER_Do_not_contact__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Do Not Contact</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ER_Edenred_Newsletter__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Edenred Newsletter</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ER_Email_Opt_Out__c</fullName>
        <formula>IF(HasOptedOutOfEmail=true,IMAGE(&apos;/resource/ER_Email_Opt_Out&apos;,&apos;ER_Email_Opt_Out&apos;,40,40),&quot;&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Email Opt Out</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ER_FinancialCenter__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Financial Center</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>$Source.AccountId</field>
                <operation>equals</operation>
                <valueField>ER_Financial_Center__c.ER_Account_Name__c</valueField>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>ER_Financial_Center__c</referenceTo>
        <relationshipLabel>Contacts</relationshipLabel>
        <relationshipName>Contacts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ER_Inactive_Reason__c</fullName>
        <label>Inactive Reason</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Left the company</fullName>
                </value>
                <value>
                    <fullName>Maternity Leave</fullName>
                </value>
                <value>
                    <fullName>Other Reason</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ER_Inactive_date__c</fullName>
        <label>Inactive date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>ER_LastModifiedBy__c</fullName>
        <formula>IF ( DATEVALUE(LastModifiedDate) &gt;= DATE ( YEAR (DATEVALUE(LastModifiedDate)),3,1)
+
( 14 - CASE( MOD(DATE ( YEAR (DATEVALUE(LastModifiedDate)),3,1) - DATE (1900,1,7),7) ,
0,7,MOD(DATE ( YEAR (DATEVALUE(LastModifiedDate)),3,1) - DATE (1900,1,7),7))
)

&amp;&amp;

DATEVALUE(LastModifiedDate) &lt; DATE ( YEAR (DATEVALUE(LastModifiedDate)),11,1) +
(
7-
CASE( MOD(DATE ( YEAR (DATEVALUE(LastModifiedDate)),11,1) - DATE (1900,1,7),7) ,
0,7,MOD(DATE ( YEAR (DATEVALUE(LastModifiedDate)),11,1) - DATE (1900,1,7),7))
),

/*check if the last modified by is filled */
IF(ER_Last_Modified_By_Functional_user__c != null, 

/* if true */

HYPERLINK(LEFT($Api.Partner_Server_URL_420, FIND( &apos;/services&apos;, $Api.Partner_Server_URL_420)) + 
               &apos;/lightning/r/User/&apos; + ER_Last_Modified_By_Functional_user__c + &apos;/view&apos;,ER_Last_Modified_By_Functional_user__r.FirstName  + &apos; &apos; + ER_Last_Modified_By_Functional_user__r.LastName) +  &apos;, &apos; + 
               TEXT(DAY(DATEVALUE(ER_Last_Modified_Date_Functional_User__c + 2/24))) + &apos;/&apos; +  
               TEXT(MONTH(DATEVALUE(ER_Last_Modified_Date_Functional_User__c + 2/24))) + &apos;/&apos; + 
               TEXT(YEAR(DATEVALUE(ER_Last_Modified_Date_Functional_User__c + 2/24))) + &apos; &apos; +  
               TEXT(HOUR(TIMEVALUE(ER_Last_Modified_Date_Functional_User__c + 2/24))) + &apos;:&apos; +  
               TEXT(MINUTE(TIMEVALUE(ER_Last_Modified_Date_Functional_User__c + 2/24))), 

/* else */
&apos;&apos;) 

,


/*check if the last modified by is filled */
IF(ER_Last_Modified_By_Functional_user__c != null, 

/* if true */

HYPERLINK(LEFT($Api.Partner_Server_URL_420, FIND( &apos;/services&apos;, $Api.Partner_Server_URL_420)) + 
               &apos;/lightning/r/User/&apos; + ER_Last_Modified_By_Functional_user__c + &apos;/view&apos;,ER_Last_Modified_By_Functional_user__r.FirstName + &apos; &apos; + ER_Last_Modified_By_Functional_user__r.LastName) +  &apos;, &apos; + 
               TEXT(DAY(DATEVALUE(ER_Last_Modified_Date_Functional_User__c+ 1/24))) + &apos;/&apos; +  
               TEXT(MONTH(DATEVALUE(ER_Last_Modified_Date_Functional_User__c+ 1/24))) + &apos;/&apos; + 
               TEXT(YEAR(DATEVALUE(ER_Last_Modified_Date_Functional_User__c+ 1/24))) + &apos; &apos; +  
               TEXT(HOUR(TIMEVALUE(ER_Last_Modified_Date_Functional_User__c+ 1/24))) + &apos;:&apos; +  
               TEXT(MINUTE(TIMEVALUE(ER_Last_Modified_Date_Functional_User__c+ 1/24))), 

/* else */
&apos;&apos;)

)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Last Modified By Functional User</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ER_Last_Modified_By_Functional_user__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Last Modified by a functional user</description>
        <label>Last Modified By Functional user</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Contacts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ER_Last_Modified_Date_Functional_User__c</fullName>
        <label>Last Modified Date Functional User</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>ER_Last_date_of_Sync__c</fullName>
        <description>which hold the latest date/time when info was sent to the OS</description>
        <label>Last date of Sync</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>ER_Last_inbound_contact_date__c</fullName>
        <label>Last inbound contact date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>ER_NPS__c</fullName>
        <label>NPS</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ER_Paper_Operational_System_ID__c</fullName>
        <externalId>true</externalId>
        <label>Paper Operational System ID</label>
        <length>40</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>ER_Role__c</fullName>
        <label>Role</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Owner</fullName>
                </value>
                <value>
                    <fullName>Top Management</fullName>
                </value>
                <value>
                    <fullName>Middle Management</fullName>
                </value>
                <value>
                    <fullName>Decision Maker</fullName>
                </value>
                <value>
                    <fullName>Influencer</fullName>
                </value>
                <value>
                    <fullName>Assistant</fullName>
                </value>
                <value>
                    <fullName>Store manager</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ER_Status__c</fullName>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Active</fullName>
                    <default>true</default>
                    <label>Active</label>
                </value>
                <value>
                    <fullName>Inactive</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>IT_AC_User__c</fullName>
        <label>AC User</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>IT_Autonumber_Code__c</fullName>
        <displayFormat>SF{0000000}</displayFormat>
        <label>IT_Autonumber_Code</label>
        <type>AutoNumber</type>
    </fields>
    <fields>
        <fullName>IT_Client_Billing_Recepits__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Client Billing Recepits</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>IT_Code__c</fullName>
        <externalId>true</externalId>
        <label>Code</label>
        <length>20</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>IT_Contact_Type__c</fullName>
        <formula>CASE(IT_Type__c,
&quot;Ref&quot;,&quot;[REF]&quot;,
&quot;Soc&quot;,&quot;[SOC]&quot;,
&quot;&quot;)

&amp; &quot; &quot; &amp;

CASE( IT_Type__c , 
&quot;Ref&quot;, FirstName + &quot; &quot; + LastName, 
&quot;Soc&quot;, FirstName + &quot; &quot; + LastName,
&quot;&quot;)</formula>
        <label>Contact Type</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>IT_Future_Change_Contact__c</fullName>
        <label>Future Change Contact</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>IT_Last_Name__c</fullName>
        <label>Last Name</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>IT_Mail_PEC__c</fullName>
        <label>Mail PEC</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>IT_Order_Making__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Order Making</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>IT_PEC__c</fullName>
        <label>PEC</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>IT_Referent_Progressive__c</fullName>
        <label>Referent Progressive</label>
        <length>11</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>IT_Ticket_Receipts__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Ticket Receipts</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>IT_Type__c</fullName>
        <defaultValue>&quot;Ref&quot;</defaultValue>
        <label>Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Cli</fullName>
                </value>
                <value>
                    <fullName>Attv</fullName>
                </value>
                <value>
                    <fullName>Vons</fullName>
                </value>
                <value>
                    <fullName>Ref</fullName>
                    <default>true</default>
                    <label>Ref</label>
                </value>
                <value>
                    <fullName>Soc</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>IT_Validity_End_Date__c</fullName>
        <label>Validity End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>IT_Validity_Start_Date__c</fullName>
        <label>Validity Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>ER_Language__c</fullName>
        <label>Language</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>ER_Language</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>CZ_AcademicTitle__c</fullName>
        <label>Academic Title</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>as.</fullName>
                </value>
                <value>
                    <fullName>CSc.</fullName>
                </value>
                <value>
                    <fullName>DiS.</fullName>
                </value>
                <value>
                    <fullName>doc.</fullName>
                </value>
                <value>
                    <fullName>Dr.</fullName>
                </value>
                <value>
                    <fullName>DrSc.</fullName>
                </value>
                <value>
                    <fullName>DSc.</fullName>
                </value>
                <value>
                    <fullName>Ing.</fullName>
                </value>
                <value>
                    <fullName>Ing. arch.</fullName>
                </value>
                <value>
                    <fullName>JUDr.</fullName>
                </value>
                <value>
                    <fullName>MDDr.</fullName>
                </value>
                <value>
                    <fullName>MgA.</fullName>
                </value>
                <value>
                    <fullName>Mgr.</fullName>
                </value>
                <value>
                    <fullName>MSDr.</fullName>
                </value>
                <value>
                    <fullName>MUDr.</fullName>
                </value>
                <value>
                    <fullName>MVDr.</fullName>
                </value>
                <value>
                    <fullName>odb. as.</fullName>
                </value>
                <value>
                    <fullName>PaedDr.</fullName>
                </value>
                <value>
                    <fullName>Ph.D.</fullName>
                </value>
                <value>
                    <fullName>PharmDr.</fullName>
                </value>
                <value>
                    <fullName>PhDr.</fullName>
                </value>
                <value>
                    <fullName>PhMr.</fullName>
                </value>
                <value>
                    <fullName>prof.</fullName>
                </value>
                <value>
                    <fullName>RCDr.</fullName>
                </value>
                <value>
                    <fullName>RNDr.</fullName>
                </value>
                <value>
                    <fullName>RSDr.</fullName>
                </value>
                <value>
                    <fullName>RTDr.</fullName>
                </value>
                <value>
                    <fullName>Th.D.</fullName>
                </value>
                <value>
                    <fullName>ThDr.</fullName>
                </value>
                <value>
                    <fullName>ThLic.</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <listViews>
        <fullName>AllContacts</fullName>
        <columns>FULL_NAME</columns>
        <columns>ACCOUNT.NAME</columns>
        <columns>CONTACT.TITLE</columns>
        <columns>CONTACT.PHONE1</columns>
        <columns>CONTACT.EMAIL</columns>
        <columns>CORE.USERS.FIRST_NAME</columns>
        <columns>CORE.USERS.LAST_NAME</columns>
        <filterScope>Everything</filterScope>
        <label>All Contacts</label>
    </listViews>
    <listViews>
        <fullName>ERPL_Poland_All_Contacts</fullName>
        <columns>FULL_NAME</columns>
        <columns>ACCOUNT.NAME</columns>
        <columns>CONTACT.TITLE</columns>
        <columns>CONTACT.PHONE1</columns>
        <columns>CONTACT.EMAIL</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>ER_Business_Unit__c</field>
            <operation>equals</operation>
            <value>PL</value>
        </filters>
        <label>Poland : All Contacts</label>
        <sharedTo>
            <roleAndSubordinates>Poland</roleAndSubordinates>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>Hungary_Contacts</fullName>
        <columns>FULL_NAME</columns>
        <columns>ACCOUNT.NAME</columns>
        <columns>CONTACT.PHONE1</columns>
        <columns>CONTACT.EMAIL</columns>
        <columns>CONTACT.TITLE</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>ER_Business_Unit__c</field>
            <operation>equals</operation>
            <value>HU</value>
        </filters>
        <label>Hungary Contacts</label>
        <sharedTo>
            <roleAndSubordinates>HUN</roleAndSubordinates>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>MyContacts</fullName>
        <columns>FULL_NAME</columns>
        <columns>ACCOUNT.NAME</columns>
        <columns>CONTACT.TITLE</columns>
        <columns>CONTACT.PHONE1</columns>
        <columns>CONTACT.EMAIL</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <filterScope>Mine</filterScope>
        <label>My Contacts</label>
    </listViews>
    <recordTypes>
        <fullName>ER_Contact_RT</fullName>
        <active>true</active>
        <label>Business Contact</label>
    </recordTypes>
    <sharingModel>ControlledByParent</sharingModel>
    <validationRules>
        <fullName>VRER01_Email_OR_PhoneNumber_required</fullName>
        <active>false</active>
        <description>Suggestion: E-mail or Phone/Mobilephone number must be a required field.</description>
        <errorConditionFormula>AND( 
NOT($User.ER_BypassVR__c),
AND( 
Email == null, 
AND (Phone == null, MobilePhone == null) 
))</errorConditionFormula>
        <errorMessage>E-mail or Phone/Mobile phone number are required.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>VRER03_Contact_Mandatory_Fields</fullName>
        <active>true</active>
        <description>The field FirstName is mandatory.</description>
        <errorConditionFormula>AND(
NOT($User.ER_BypassVR__c),
OR(
ISBLANK (FirstName)))</errorConditionFormula>
        <errorDisplayField>FirstName</errorDisplayField>
        <errorMessage>The first name information is mandatory to create a contact</errorMessage>
    </validationRules>
    <validationRules>
    <fullName>VRER04_Inactivation_Reason_Mandatory</fullName>
        <active>true</active>
        <description>When the Contact becomes inactive, the inactive reason becomes mandatory.</description>
        <errorConditionFormula>AND(
NOT($User.ER_BypassVR__c),
OR( AND(ISPICKVAL( ER_Status__c ,&apos;Inactive&apos; ),
ISBLANK( TEXT(ER_Inactive_Reason__c) )) , 
AND(ISPICKVAL( ER_Status__c ,&apos;Active&apos; ),
NOT(ISBLANK( TEXT(ER_Inactive_Reason__c)))) )
)</errorConditionFormula>
        <errorMessage>The Inactivation Reason should be filled when the contact is Inactive</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>VRPL01_Email_Or_PhoneNumber_Required</fullName>
        <active>false</active>
        <description>E-mail or Phone/Mobilephone number must be filled in.</description>
        <errorConditionFormula>AND( 
NOT($User.ER_BypassVR__c),
ER_Business_Unit__c =&apos;PL&apos;, 
Email == null,
Phone == null,
MobilePhone == null 
)</errorConditionFormula>
        <errorMessage>E-mail or Phone/Mobile phone number are required.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>VRHU04_Mobile_Number_Hungarian_Format</fullName>
        <active>true</active>
        <description>This validation rule will control the phone number format to ensure it fit Hungarian format, as following : +36-11-111-1111 (mobile phones)</description>
        <errorConditionFormula>AND( 
NOT($User.ER_BypassVR__c),
ER_Business_Unit__c =&apos;HU&apos;,  
NOT( 
OR( 
LEN( MobilePhone ) = 0, 
REGEX( MobilePhone , &quot;[+36]{3}-[0-9]{2}-[0-9]{3}-[0-9]{4}&quot;) 
)))</errorConditionFormula>
        <errorDisplayField>MobilePhone</errorDisplayField>
        <errorMessage>The format of the Mobile Phone Number must be equal to Hungarian format, as following : 
+36-11-111-1111 (mobile phones)</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>VRHU05_Phone_Number_Hungarian_Format</fullName>
        <active>true</active>
        <description>This validation rule will control the phone number format to ensure it fit Hungarian format, as following : 
+36-1-111-1111 (capital city)
+36-11-111-111 (countryside)</description>
        <errorConditionFormula>AND( 
NOT($User.ER_BypassVR__c),
ER_Business_Unit__c =&apos;HU&apos;,  
NOT( 
OR( 
LEN(  Phone ) = 0, 
REGEX(  Phone , &quot;[+36]{3}-[0-9]{1}-[0-9]{3}-[0-9]{4}&quot;),
REGEX( Phone , &quot;[+36]{3}-[0-9]{2}-[0-9]{3}-[0-9]{3}&quot;) 
)))</errorConditionFormula>
        <errorDisplayField>Phone</errorDisplayField>
        <errorMessage>The format of the Phone Number must be equal to Hungarian format, as following : 
+36-1-111-1111 (capital city)
+36-11-111-111 (countryside)</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>VRHU10_Email_OR_PhoneNumber_required</fullName>
        <active>false</active>
        <description>Suggestion: E-mail or Phone/Mobilephone number must be a required field.</description>
        <errorConditionFormula>AND( 
NOT($User.ER_BypassVR__c), 
ER_Business_Unit__c =&apos;HU&apos;,   
AND(
Email == null,
AND (Phone == null, MobilePhone == null)  
))</errorConditionFormula>
        <errorMessage>E-mail or Phone/Mobile phone number are required.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>VRIT01_Contact_Detail_Name</fullName>
        <active>true</active>
        <errorConditionFormula>AND(
$User.ER_BypassVR__c = False,
ISPICKVAL( $User.ER_Business_Unit__c , &apos;IT&apos;),
NOT(ISBLANK(Phone)),
NOT( REGEX( Phone , &quot;[\\s0-9]+&quot;))

)</errorConditionFormula>
        <errorMessage>Phone characters must be numbers!</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>VRIT02_Client_SOC</fullName>
        <active>true</active>
        <errorConditionFormula>AND (
$User.ER_BypassVR__c = False,
ISPICKVAL($User.ER_Business_Unit__c , &apos;IT&apos;),
$Profile.Name != &apos;IT System Integration&apos;,
				 ISPICKVAL(IT_Type__c	, &apos;Soc&apos;))</errorConditionFormula>
        <errorMessage>&apos;Soc&apos; type customer is not possible to make changes</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>VRIT03_Fax_Length</fullName>
        <active>true</active>
        <errorConditionFormula>AND (
$User.ER_BypassVR__c = False,
ISPICKVAL($User.ER_Business_Unit__c , &apos;IT&apos;),
LEN(Fax) &gt; 16 
 )</errorConditionFormula>
        <errorMessage>Fax cannot be longer than 16 characters.</errorMessage>
    </validationRules>
</CustomObject>